--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -1,9 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap");
-
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities; */
 
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 /* utils */
 
 .grid {
@@ -45,7 +47,7 @@
 
 .overlay .video {
   @apply absolute transform bg-blue-200 bg-no-repeat bg-center w-20 h-20 rounded-full items-center justify-center flex -translate-x-1/2 -translate-y-1/2;
-  background-image: url("./images/icon-play.svg#icon-play");
+  background-image: url("../images/icon-play.svg#icon-play");
   top: 50%;
   left: 50%;
 }
